Fix flex wrap

--- a/src/gaming/index.sass
+++ b/src/gaming/index.sass
@@ -4,6 +4,7 @@
   .games-container
     display: flex
     flex-direction: row
+    flex-wrap: wrap
     padding: 20px 40px 40px 40px
     a
       color: #e9e9e9
